@@ -36,7 +36,7 @@
         <meta name="lang:{{ key }}" content="{{ lang.t(key) }}">
       {% endfor %}
       <link rel="shortcut icon" href="{{ config.theme.favicon | url }}">
-      <meta name="generator" content="mkdocs-{{ mkdocs_version }}, mkdocs-material-3.0.5">
+      <meta name="generator" content="mkdocs-{{ mkdocs_version }}, mkdocs-material-3.0.6">
     {% endblock %}
     {% block htmltitle %}
       {% if page and page.meta and page.meta.title %}
